--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     --color-black:#000000;
     --color-blue:#03e8f9;
     --color-orange:#fd6413;
-    --color-gray:#1b1e26;
+    --color-gray:#414348;
 
 }
 
@@ -21,6 +21,7 @@
 
 body{
     font-family: 'Open Sans','sans-serif';
+    margin:0;
 }
 
 h1,h2,h3,p,ul{
@@ -48,3 +49,49 @@ button:focus{
     outline:1px solid var(--color-accent);
 }
 
+
+
+/* Header */
+.header{
+    background-color:var(--color-primary-variant);
+    position: fixed;
+    top:0;
+    width:100%;
+    padding:1rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo{
+    display:flex;
+    align-items: center;
+    gap:8px;
+}
+
+.header__logo__img{
+    width:36px;
+    height:36px;
+}
+
+.header__logo__title{
+    font-size: 1.8rem;
+}
+
+.header__menu{
+    display:flex;
+    gap:4px;
+}
+
+.header__menu__item{
+    padding:8px 16px;
+}
+
+.header__menu__item:hover{
+    border-bottom:1px solid var(--color-accent);
+}
+
+.header__menu__item.active{
+    border:1px solid var(--color-accent);
+    border-radius: 4px;
+}
