--- a/css/style.css
+++ b/css/style.css
@@ -417,11 +417,38 @@ button:focus{
 .testimonial__bubble__name{
     color:var(--color-accent);
 }
+/* Arrow up */
+.arrow-up{
+    background-color:var(--color-primary);
+    position:fixed;
+    bottom:3rem;
+    right:3rem;
+    font-size:3rem;
+    width:4.5rem;
+    height:4.5rem; 
+    text-align:center;
+    box-shadow: 5px 5px 0px 0px var(--color-accent);
+}
 
 
 
+/* Footer */
+#contact{
+    background-color: var(--color-primary);
+    color:var(--color-text);
+}
 
+.contact__links{
+    display:flex;
+    justify-content: center;
+    gap:1rem;
+    padding:1rem;
+    font-size:2rem;
+}  
 
+.contact__link:hover{
+    color:var(--color-accent);
+}
 
 
 
