--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button{
 }
 
 button:focus{
-    outline:1px solid var(--color-accent);
+    outline:1px solid transparent;
 }
 
 /* Common */
@@ -107,13 +107,24 @@ button:focus{
     font-size: 1.8rem;
 }
 
+.header__toggle{
+    display:none;
+    color:var(--color-white);
+    font-size:1.5rem;
+    position:absolute;
+    top:1rem;
+    right:1rem;
+}
+
 .header__menu{
     display:flex;
     gap:4px;
 }
 
 .header__menu__item{
+    display:block;
     padding:8px 16px;
+    border-bottom:1px solid transparent;
 }
 
 .header__menu__item:hover{
@@ -475,15 +486,25 @@ button:focus{
     .header{
         flex-direction:column;
         align-items: start;
+        background-color: var(--color-primary);
     }
 
+    .header__toggle{
+        display:block;
+    }
+
+
     .header__menu{
+        display:none;
         flex-direction:column;
         text-align:center;
         padding:1rem 4rem;
         gap:1rem;
     }
 
+    .header__menu.open {
+        display:flex;
+    }
 
     .header__nav{
         width:100%;
